--- a/conf/modules.config
+++ b/conf/modules.config
@@ -133,6 +133,13 @@ if (params.aligner == "alevin") {
             ]
             ext.args = "-r cr-like"
         }
+        withName: 'SIMPLEAF_QUANT_AUTO' {
+            publishDir = [
+                path: { "${params.outdir}/${params.aligner}" },
+                mode: params.publish_dir_mode
+            ]
+            ext.args = "-r cr-like"
+        }
     }
 }
 
